# AI-ChatBot-with-RAG

./: README.md  pyproject.toml  pyvenv.cfg
backend/: doc_loader.py  vectordb.py
frontend/: app.py
llm/: rag_pipeline.py
